--- a/src/app/ejericio-maquinas/ejericio-maquinas.component.html
+++ b/src/app/ejericio-maquinas/ejericio-maquinas.component.html
@@ -1,6 +1,6 @@
 
 <div class="title">
-  <mat-card-title>AGENCIA AZUCAR</mat-card-title>
+  <mat-card-title>EJERCICIO MAQUINAS</mat-card-title>
 </div>
 <hr>
 
